fix cover on mobile

--- a/src/example.css
+++ b/src/example.css
@@ -116,7 +116,7 @@ iframe{
 }
 #cover{
   background-image: url("./cover.jpg"); 
-  background-position: 40% 38%; height: 572px;
+  background-position: 40% 38%; height: 80vh;
    /* Add the blur effect */
    /* filter: blur(3px); */
    /* -webkit-filter: blur(3px); */
@@ -259,5 +259,7 @@ ul.navbar li.active {
 }
 
 @media only screen and (max-width: 450px) {
-
+#cover {
+  background-position: 32.5% 38%; width: 100%; height: 80vh;
+}
 }
